fix how it looks on mobile

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -21,14 +21,18 @@ body {
   height: 100vw;
   margin: 0;
   padding: 0 0.5rem;
+  flex-wrap: wrap;
+  max-width: 100vw;
 }
 
 aside {
-  width: 20%;
+  flex: 0.5;
+  min-width: 10rem;
 }
 
 main {
-  width: 80%;
+  flex: 2;
+  max-width: 100%;
 }
 
 body {
